@@ -1,3 +1,10 @@
+2011-03-31  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * plugins/filebrowser.c:
+   Make 'Hide object files' preference configurable with file
+   extensions.
+
+
 2011-03-30  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * src/editor.c:
